main/default/objects/Insurer_Layer_Limit__c/Insurer_Layer_Limit__c.object-meta.xml
<CustomObject>
    <label>Insurer Layer Limit</label>
    <nameField>
        <displayFormat>ILL-{0000}</displayFormat>
        <label>Insurer Layer Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurer Layer Limit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>