main/default/objects/Insurer_Layer_Limit__c/fields/Insurer_Layer_Limit__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Layer_Limit__c</fullName>
    <label>Insurer Layer Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>