main/default/objects/Insurer_Layer_Limit__c/fields/Insurer_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Policy_Number__c</fullName>
    <label>Insurer Policy Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>