main/default/objects/Insurer_Layer_Limit__c/fields/Layer__c.field-meta.xml
<CustomField>
    <fullName>Layer__c</fullName>
    <label>Layer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>