main/default/objects/Insurer_Layer_Limit__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Insurer Layer Limit</relationshipLabel>
    <relationshipName>Insurer_Layer_Limit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>